work through some various questions around loops. lots of head scratching.
Co-authored-by: Tristan Emerson <tristan@stickerslug.com>

--- a/index.html
+++ b/index.html
@@ -8,4 +8,7 @@
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/styles.js"></script>
   <title>TITLE</title>
-</head>
+  <body>
+
+  </body>
+  </head>
